--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@ li {
     <ul>
         <li>
             <a href="./the raven.html">
-            <img src="./raven_r.png" alt="raven" class="center">
+            <img src="./raven.png" alt="raven" class="center">
             </a>
             <div id="title">The Raven</div>
         </li>
         <li>
             <a href="./Annabel Lee.html">
-            <img src="./tomb_r.png" alt="tomb" class="center">
+            <img src="./tomb.png" alt="tomb" class="center">
             </a>
             <div id="title">Annabel Lee</div>
         </li>
         <li>
             <a href="./Sonnet 71.html">
-            <img src="./letter_r.png" alt="letter" class="center">
+            <img src="./letter.png" alt="letter" class="center">
             </a>
             <div id="title">Sonnet LXXI</div>
         </li>
