--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curator Assianment Display</title>
+    <title>Curator Assignment Display by Yejoon</title>
 
 <style>
 body {background-color:black;}
@@ -39,7 +39,7 @@ li {
 </head>
 <body>
     <div id="container">
-    <h1>The Death of Loved one</h1>
+    <h1>The Death of a Loved one</h1>
     </div>
     <ul>
         <li>
